--- a/css/advisor.css
+++ b/css/advisor.css
@@ -1983,7 +1983,8 @@ ALL SECTIONS
 
 .subpage-header {
     background: #f2f2f2;
-    padding: 82px 0 50px;
+    /* padding: 82px 0 50px; */
+    padding: 20px 0 20px;
 }
 
 .subpage-header .btn {
