--- a/css/hero-slider.css
+++ b/css/hero-slider.css
@@ -180,13 +180,15 @@ Slider
 
 @media only screen and (min-width: 768px) {
     .cd-hero-slider {
-        height: 500px;
+        /* height: 500px; */
+        height: 350px;
     }
 }
 
 @media only screen and (min-width: 1170px) {
     .cd-hero-slider {
-        height: 680px;
+        /* height: 680px; */
+        height: 450px;
     }
 }
 
