--- a/css/hero-slider.css
+++ b/css/hero-slider.css
@@ -181,14 +181,14 @@ Slider
 @media only screen and (min-width: 768px) {
     .cd-hero-slider {
         /* height: 500px; */
-        height: 350px;
+        height: 330px;
     }
 }
 
 @media only screen and (min-width: 1170px) {
     .cd-hero-slider {
         /* height: 680px; */
-        height: 450px;
+        height: 430px;
     }
 }
 
@@ -346,6 +346,7 @@ Single slide style
     .cd-hero-slider .cd-full-width,
     .cd-hero-slider .cd-half-width {
         padding-top: 150px;
+        /* padding-top: 100px; */
     }
     .cd-hero-slider .cd-bg-video-wrapper {
         display: block;
@@ -375,7 +376,8 @@ Single slide style
 @media only screen and (min-width: 1170px) {
     .cd-hero-slider .cd-full-width,
     .cd-hero-slider .cd-half-width {
-        padding-top: 220px;
+        /* padding-top: 220px; */
+        padding-top: 150px;
     }
     .header-transparent .cd-hero-slider .cd-full-width,
     .header-transparent .cd-hero-slider .cd-half-width {
